finish 9 parts